# name

./: .clang-format  .gitignore  CMakeLists.txt  run.sh
src/: colony.cpp  colony.hpp  glm_format.hpp  main.cpp  map.cpp  map.hpp  random.cpp  random.hpp
